fix sidebar overflow

--- a/admin/src/components/layout/sidebar/styles.module.css
+++ b/admin/src/components/layout/sidebar/styles.module.css
@@ -5,6 +5,16 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 5%);
-    overflow-y: scroll;
     position: fixed;
+}
+
+.navbar {
+    overflow: auto;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+}
+
+.navbar::-webkit-scrollbar{
+    width: 0 !important;
+    display: none; 
 }
